syntax = "proto3";

package test;
option go_package="./pb";

//做测试
message ChoiceItem {
  int64 Number = 1;
  string Data = 2;
}
message TestReq {
  repeated ChoiceItem Choice = 1;
  string Token = 2;
}
message TestResp {
  bool Flag = 1;
}

//返回测试结果
message TestInfoReq{
  string Token = 1;
  string UserID = 2;
}
message TestInfoResp{
  string Name = 1;
  string Gender = 2;
  string Major = 3;
  string Grade = 4;
  int64 LeQunXing = 5;
  int64 YouHengXing = 6;
  int64 XingFenXing = 7;
  int64 CongHuiXing = 8;
  int64 JiaoJiXing = 9;
  int64 HuaiYiXing = 10;
  int64 WenDingXing = 11;
  repeated string Choice = 12;
}

service TestClient {
  rpc UserTest(TestReq) returns(TestResp);
  rpc CheckTestResult(TestInfoReq) returns(TestInfoResp);
}
